# qdocse-verifier

./: .claudeignore  .gitignore  AI_CONTEXT.md  CLAUDE.md  README.md  clean.sh  conftest.py  pyproject.toml
config/: default.yaml  example.yaml  target.yaml.example
docs/: QDocSE-User-Guide-3_2_0.md  case_acl_add.txt  case_acl_create.txt  case_acl_destroy.txt  case_acl_edit.txt  case_acl_export_import.txt  case_acl_file.txt  case_acl_list.txt  case_acl_program.txt  case_acl_remove.txt  case_adjust.txt  case_list.txt  case_view.txt  checklist.txt
fixtures/: __init__.py  acl.py  directory.py  session.py
helpers/: __init__.py  client.py  commands.py  executor.py  result.py  state.py  system.py
tests/acl_effectiveness/: README.md  conftest.py
tests/acl_effectiveness/access_modes/: test_execute_mode.py  test_mode_matching_rules.py  test_read_mode.py  test_write_mode.py
tests/acl_effectiveness/access_result/: test_ciphertext.py  test_denied.py  test_plaintext.py
tests/acl_effectiveness/encryption/: test_encrypted.py
tests/acl_effectiveness/entry_order/: test_allow_first.py  test_deny_first.py  test_empty_acl.py  test_partial_match.py
tests/acl_effectiveness/file_lifecycle/: test_create.py  test_delete.py  test_new_file_inheritance.py  test_read.py  (+2 more)
tests/integration/: test_acl_access_control.py  test_workflows.py
tests/unit/: test_acl_add.py  test_acl_create.py  test_acl_destroy.py  test_acl_edit.py  test_acl_export_import.py  test_acl_file.py  test_acl_id_zero.py  test_acl_list.py  test_acl_program.py  test_acl_remove.py  test_adjust.py  test_basic.py
(+13 files in other folders)
