[project]
name = "qdocse-test"
version = "1.0.0"
description = "QDocSEConsole 测试套件"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "-ra"]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 耗时测试",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
